--- a/src/pages/choice/choice.html
+++ b/src/pages/choice/choice.html
@@ -298,7 +298,7 @@
                 <span class="sm" style="color: black;
                 background: yellow;" *ngIf="main.totalagasi!=0 && main.lack>0"> 빵{{main.lack}} </span> </p>
 
-                <span  style="
+                <!-- <span  style="
                 border: solid 1px;
                 font-size: 12px;
                 padding: 3px;
@@ -309,7 +309,7 @@
                 font-size: 12px;
                 padding: 3px;
                 margin-left: 10px;
-                background: white;" *ngIf="main.status=='reserved'">예약중</span>
+                background: white;" *ngIf="main.status=='reserved'">예약중</span> -->
               </div>
               <div class="latter">
                 <p>{{main.lastupdatedperson}} {{main.lastupdated.split(" ")[1]}}</p>
