--- a/src/pages/ordermain/ordermain.html
+++ b/src/pages/ordermain/ordermain.html
@@ -90,7 +90,7 @@
       검색
     </button>
   </div>
-  <div class="room-current">
+  <div style="margin-top:50px;" class="room-current">
     <div class="title-div">
       <ion-icon class="square" name="square"></ion-icon>
       <span class="text">룸 현황</span>
