--- a/src/pages/wt/wt.html
+++ b/src/pages/wt/wt.html
@@ -58,6 +58,10 @@
     <ion-list>
       <ion-item (click)="gotolink(7)">서빙내역</ion-item>
     </ion-list>
+
+    <ion-list>
+      <ion-item (click)="gotolink(8)">판매내역</ion-item>
+    </ion-list>
     <ion-list>
       <ion-item (click)="logout();">로그아웃</ion-item>
     </ion-list>
