--- a/src/pages/choicemodal2/choicemodal2.html
+++ b/src/pages/choicemodal2/choicemodal2.html
@@ -12,7 +12,7 @@ top: 30%;" padding>
   overflow: scroll;" class="modal_content">
 
         <div class="img">
-          <div style="width: 100%; height:70px;">
+          <div  class="contentheader">
             <div style="
                 width: 100px;
     margin: 0px !important;
@@ -37,21 +37,25 @@ border: solid 1px;
 background: red;" ion-button (click)="confirm()">저장</button>
 
           </div>
-          <div *ngFor="let aa of agasilist; let i = index" class="center">
-            <span style="    color: black;
-            width: 50%;
-            line-height: 80px;
-            font-size: 20px;
-            text-align: center;">{{aa.name}} 조판팀 </span>
-            <ion-list style="    margin-top: 20px;">
-              <ion-item>
-                <ion-label>조판팀 </ion-label>
-                <ion-select [(ngModel)]="this['qtd' + i]">
-                  <ion-option *ngFor="let a of jopanlist" style="color:black;" value="{{a.name}}">{{a.name}}</ion-option>
-                </ion-select>
-              </ion-item>
-            </ion-list>
+          <div class="contentsection">
+            <div *ngFor="let aa of agasilist; let i = index" class="center">
+              <span style="    color: black;
+              width: 40%;
+              line-height: 80px;
+              font-size: 20px;
+              text-align: center;">{{aa.name}}</span>
+              <ion-list style="    margin-top: 20px;">
+                <ion-item>
+                  <ion-label>조판팀 </ion-label>
+                  <ion-select style="    padding: 10px 3px 10px 3px;
+                  width: 120px;" [(ngModel)]="this['qtd' + i]">
+                    <ion-option *ngFor="let a of jopanlist" style="color:black;" value="{{a.name}}">{{a.name}}</ion-option>
+                  </ion-select>
+                </ion-item>
+              </ion-list>
+            </div>
           </div>
+          
          
 
 
