--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -111,7 +111,7 @@ height: 85%;"padding>
   </div>
 
   <div *ngIf="stage==2">
-      <div class="input-title2"><span style="font-size:30px;" >환영합니다.{{stage}} <br></span>
+      <div class="input-title2"><span style="font-size:30px;" >환영합니다...{{stage}} <br></span>
       <span style="font-size:30px;">
       WAD를 이용해주시는 {{name}} 님께 <br>진심으로 감사드립니다. 
       </span>
@@ -183,7 +183,7 @@ height: 85%;"padding>
 
   <div *ngIf="stage==3">
 
-    <div class="input-title2"><span style="font-size:30px;" >환영합니다. {{stage}}<br></span>
+    <div class="input-title2"><span style="font-size:30px;" >환영합니다.. {{stage}}<br></span>
       <span style="font-size:30px;">
       선택하신 회사는 {{selectedCompany.name}}입니다.<br> 
       위치는 {{selectedCompany.address}} <br>
@@ -202,7 +202,7 @@ height: 85%;"padding>
     <div style="text-align:center;">
       <button (click)="selecttype(4)" class="newbtn">경리</button>
       <button (click)="selecttype(5)" class="newbtn">인포 </button>
-      <button (click)="selecttype(6)" class="newbtn">주차 </button>
+      <!-- <button (click)="selecttype(6)" class="newbtn">주차 </button> -->
 
     </div>
     <div style="text-align:center;">
@@ -332,7 +332,12 @@ text-align: center;">조판팀을 설정해주세요. </span>
           text-decoration: line-through;
           font-size: 11px;
           color: red;">{{paytext}}</span><span>한달 무료이용</span></button>
+        <button *ngIf="approved" class="paybtn" (click)="uploadToServer(2);"><span style="
+          text-decoration: line-through;
+          font-size: 11px;
+          color: red;">{{paytext}}</span><span>한달 무료이용</span></button>
         <button *ngIf="approved" class="paybtn" (click)="initialize2(1);">무료로이용해보기</button>
+        <button *ngIf="approved" class="paybtn" (click)="initialize(1);">초기화 및 새로가입</button>
         <!-- <button *ngIf="approved" class="paybtn" (click)="initialize(1);">초기화 및 새로가입</button> -->
         <button *ngIf="!approved" class="paybtn" >승인대기중 </button>
         <span *ngIf="approved">결제하기를 누르면 다음달 이용시 요금이 청구됩니다. </span>
