--- a/src/pages/accountingmodal/accountingmodal.html
+++ b/src/pages/accountingmodal/accountingmodal.html
@@ -10,7 +10,8 @@ top: 30%;" padding>
   <div class="modal_content">
         
         <div class="img">
-          <h2>입금</h2>
+          <h2 *ngIf="flag==1">입금</h2>
+          <h2 *ngIf="flag==2">출금</h2>
       <div style="width: 100%; display:flex; height:50px;">
         <span style="
         width: 20%;
