--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -142,6 +142,12 @@ margin-top: -40px;" class="event-bullet" *ngIf="(
               today.getFullYear() == currentYear
               )" style="
             width: 20px;" (click)="openmodal(day)">{{day}}</span>
+              <span *ngIf="(
+                          
+                today.getMonth()+1 != currentMonth &&
+                today.getFullYear() == currentYear
+                )" style="
+              width: 20px;" (click)="openmodal(day)">{{day}}</span>
               <div  style="width: 7px;
               height: 7px;
               color: #E74371 ;
