--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -23,7 +23,7 @@
  
     <button ion-button (click)="moreorder();" class="newbtn">주문</button>
    
-    <button ion-button (click)="cancelorder();"  class="newbtn">주문 취소 </button>
+    <!-- <button ion-button (click)="cancelorder();"  class="newbtn">주문 취소 </button> -->
   </div>
  
 </ion-content>
