--- a/src/pages/choicemodal/choicemodal.html
+++ b/src/pages/choicemodal/choicemodal.html
@@ -33,7 +33,7 @@ font-size: 20px;
 float: right;
 width: 50px;
 border: solid 1px;
-background: red;" ion-button (click)="confirm()">저장</button>
+background: red;" ion-button (click)="confirm()">다음</button>
 
           </div>
 
