--- a/src/pages/waitingmodal/waitingmodal.html
+++ b/src/pages/waitingmodal/waitingmodal.html
@@ -5,7 +5,7 @@
 <ion-content class="main-view" style="background: transparent;
 background-color: transparent;
 
-height: 500px;
+height: 420px;
 top: 10%;" padding>
 
   <div class="modal_content">
@@ -13,13 +13,11 @@ top: 10%;" padding>
         <div style="
         height: 15px;
     " class="More">
-                <span *ngIf="room.category!='소'" style="
-                float: left;
-                margin-left: 10px;" >중방/대방</span>
-                <span style="right: 52px;
-                position: absolute;">아벡</span>
+                <span style="left: 20px;
+                font-size:20px;
+                position: absolute;">웨이팅 추가</span>
         </div>
-        <div  class="upper">
+        <!-- <div  class="upper">
                 <div *ngIf="room.category!='소'" class="left">
                         <span style="  
                    top: 10%;
@@ -53,7 +51,7 @@ top: 10%;" padding>
               color: white;
                 top: 30%;">ON</span>
                 </div>
-                </div>
+                </div> -->
         <div class="img">
           <div style="width: 100%; height:70px;">
             <div style="
@@ -109,7 +107,7 @@ top: 10%;" padding>
     " class="input-box" placeholder=" " [(ngModel)]="wt" type="text"></ion-input>
           </div>
 
-          <div class="left2">
+          <!-- <div class="left2">
               
         <ion-toggle style="
         position: absolute;
@@ -129,7 +127,7 @@ top: 10%;" padding>
     border: solid 1px;
     right: 10%;
 " class="input-box" placeholder=" " [(ngModel)]="nomemo" type="text"></ion-input>
-        </div>
+        </div> -->
 
           <!-- <button class="btn" (click)="takeVideo()" ion-button>동영상</button> -->
        
