--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -10,31 +10,33 @@ top: 10%;" padding>
 
   <div class="modal_content">
 
-        <div style="
+        <div *ngIf="!booleanValue3" style="
         height: 15px;
     " class="More">
-                <span *ngIf="room.category!='소'" style="
+                <span  style="
                 float: left;
-                margin-left: 10px;" >중방/대방</span>
+                margin-left: 10px;" >OFF/중방/대방</span>
                 <span style="right: 52px;
                 position: absolute;">아벡</span>
         </div>
-        <div  class="upper">
-                <div *ngIf="room.category!='소'" class="left">
-                        <span style="  
-                   top: 10%;
-    float: left;
-    position: fixed;
-    left: 12%;
-              ">OFF</span>
-                <ion-toggle style="
+        <div *ngIf="!booleanValue3" class="upper">
+                <div  class="left">
+                       
+                <span style="
                 position: absolute;
-                left: 12%;
-              " slot="end" (ionChange)="myChange($event)" [(ngModel)]="booleanValue" ></ion-toggle> <span style="
-    position: absolute;
-    color: white;
-    top: 30%;
-">ON</span>
+    left: 25%;
+    top: 25%;
+              " slot="end" *ngIf="booleanValue==0" (click)="myChange(0)" >OFF</span> 
+                <span style="
+                position: absolute;
+    left: 25%;
+    top: 25%;
+              " slot="end" *ngIf="booleanValue==1" (click)="myChange(1)" >1ㅅㅌㅌ</span> 
+                <span style="
+                position: absolute;
+    left: 25%;
+    top: 25%;
+              " slot="end" *ngIf="booleanValue==2" (click)="myChange(2)" >2ㅅㅌㅌ</span> 
 
                 </div>
                 <div class="right">
@@ -51,7 +53,7 @@ top: 10%;" padding>
               position: absolute;
               right: 5%;
               color: white;
-                top: 30%;">ON</span>
+                top: 30%;">ON.</span>
                 </div>
                 </div>
         <div class="img">
@@ -73,7 +75,7 @@ top: 10%;" padding>
     " class="input-box" placeholder=" " [(ngModel)]="incharge" type="text"></ion-input>
           </div>
 
-          <div style="width: 100%; height:70px;">
+          <div *ngIf="!booleanValue3" style="width: 100%; height:70px;">
             <div style="
             width: 30%;
             margin: 0px !important;
@@ -91,7 +93,7 @@ top: 10%;" padding>
     " class="input-box" placeholder=" " [(ngModel)]="numofpeople" type="text"></ion-input>
           </div>
 
-          <div style="width: 100%; height:70px;">
+          <div *ngIf="!booleanValue3" style="width: 100%; height:70px;">
             <div style="
             width: 30%;
             margin: 0px !important;
