--- a/src/pages/choice/choice.html
+++ b/src/pages/choice/choice.html
@@ -136,7 +136,7 @@
                 background: white;" *ngIf="main.status=='fin'">종료</span>
               </div>
               <div class="latter">
-                <p style="font-size:11px;" *ngIf="main.lastupdatedperson!=undefined">{{main.lastupdatedperson}} {{abcd(main.lastupdated.split(" ")[1])}}</p>
+                <p style="font-size:11px;" *ngIf="main.memo!=undefined">{{main.memo}}</p>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
         line-height: 5;
         line-height: 55px;
         font-size: 20px;
-        height: 75px;" class="tab">
+        height: 75px;" (click)="tabclicked(1)" class="tab">
           <input type="checkbox" checked id="tab1" name="tab-group">
           <label for="tab1">날개</label>
           <div class="tab-content">
@@ -176,7 +176,7 @@
                 <span *ngIf="main.totalagasi!=0">{{main.wt}} </span>
               </div>
               <div class="latter">
-                <p>{{main.lastupdatedperson}} {{abcd(main.lastupdated.split(" ")[1])}} </p>
+                <p style="font-size:11px;" *ngIf="main.memo!=undefined">{{main.memo}}</p>
               </div>
             </div>
 
@@ -195,10 +195,15 @@
     line-height: 5;
     line-height: 55px;
     font-size: 20px;
-    height: 75px;" class="tab">
+    height: 75px;" (click)="tabclicked(2)" class="tab">
           <input type="checkbox" id="tab2" name="tab-group">
           <label for="tab2">지명</label>
           <div class="tab-content">
+            <p class="jimyung">지명 <ion-icon (click)="write();" style="    float: right;
+              right: 30px;
+              position: relative;
+              top: 5px;" name="add"></ion-icon></p>
+              
             <ion-item  class="it" style="height:60px !important;" *ngFor="let main of jimyung">
               <div class="chat-container">
                 <div class="chat-messages">
@@ -350,7 +355,7 @@
               </div>
               <div style="
               margin-right: 10px;" class="latter">
-                <p>{{main.lastupdatedperson}} {{abcd(main.lastupdated.split(" ")[1])}} </p>
+                <p style="font-size:11px;" *ngIf="main.memo!=undefined">{{main.memo}}</p>
               </div>
             </div>
           </div>
