--- a/src/pages/editingroom/editingroom.html
+++ b/src/pages/editingroom/editingroom.html
@@ -38,8 +38,12 @@ top: 30%;" padding>
                 <input *ngIf="firststatus" disabled class="input-box"  style="width:40px !important;" [(ngModel)]="room" type="text"/></span>
                 <span style="    margin-left: 15px;">
                   
-                  <input *ngIf="!firststatus"  style="width:40px !important;"  class="input-box"  [(ngModel)]="incharge" type="text"/>
-                  <input *ngIf="firststatus" disabled style="width:40px !important;"  class="input-box"  [(ngModel)]="incharge" type="text"/></span>
+                  <input *ngIf="!firststatus"  style="
+                  width: 59px !important;
+                  margin-left: 7px;"  class="input-box"  [(ngModel)]="incharge" type="text"/>
+                  <input *ngIf="firststatus" disabled style="
+                  width: 59px !important;
+                  margin-left: 7px;"  class="input-box"  [(ngModel)]="incharge" type="text"/></span>
                 <span style="margin-left : 18px !important; " (click)="clicking(1);" style="
                 width: 53px !important;" class="newspan" *ngIf="status=='reserved'" > 예약중 </span>
                 <span (click)="clicking(2);" class="newspan" *ngIf="status=='entered'" > 입실 </span>
@@ -64,7 +68,7 @@ top: 30%;" padding>
                 <span>WT</span>
                 <span>입장일</span>
                 <span>부</span>
-                <span>로직</span>
+                <span>로직.</span>
               </div>
               <div style="
               height: 30px;
@@ -80,8 +84,9 @@ top: 30%;" padding>
                 <span (click)="clicking3(1);" class="sspan" *ngIf="bu==1" > 1부 </span>
                 <span (click)="clicking3(2);" class="sspan" *ngIf="bu==2" > 2부 </span>
 
-                <span (click)="clickforlogic(0);" class="sspan" *ngIf="logic" > ON </span>
-                <span (click)="clickforlogic(1);" class="sspan" *ngIf="!logic" > OFF </span>
+                <span (click)="clickforlogic(0);" class="sspan" *ngIf="logic==0" > OFF </span>
+                <span (click)="clickforlogic(1);" class="sspan" *ngIf="logic==1" > 1ㅅㅌㅌ </span>
+                <span (click)="clickforlogic(2);" class="sspan" *ngIf="logic==2" > 2ㅅㅌㅌ </span>
               </div>
 
             </div>
