--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -10,6 +10,9 @@ top: 10%;" padding>
 
   <div class="modal_content">
 
+    <div class="roomnameshow">
+      <p>{{room.name}}</p>
+    </div>
         <div *ngIf="!booleanValue3" style="
         height: 15px;
     " class="More">
@@ -57,7 +60,26 @@ top: 10%;" padding>
                 </div>
                 </div>
         <div class="img">
-          <div style="width: 100%; height:70px;">
+          <div *ngIf="booleanValue3" style="width: 100%; 
+          margin-top: 50px; height:70px;">
+            <div style="
+            width: 30%;
+            margin: 0px !important;
+            float: left;
+    line-height: 50px;
+    font-size: 24px;
+            " class="input-title">담당자</div>
+            <ion-input style="
+            
+    color: black;
+    font-size: 20px;
+    float: right;
+    width: 150px;
+    border: solid 1px;
+    " class="input-box" placeholder=" " [(ngModel)]="incharge" type="text"></ion-input>
+          </div>
+          <div *ngIf="!booleanValue3" style="width: 100%; 
+           height:70px;">
             <div style="
             width: 30%;
             margin: 0px !important;
