--- a/src/pages/slidetest/slidetest.html
+++ b/src/pages/slidetest/slidetest.html
@@ -1095,19 +1095,52 @@ margin: 0;">{{i.reason}}</p>
             </div>
           </div>
         </div>
+        <!-- TODO -->
+        <div style="height: 60%;
+                overflow-y: scroll;
+                position: absolute;" 
+                class="room-current">
+
+            <div class="title-div">
+              <ion-icon class="square" name="square"></ion-icon>
+              <span style="color:black;" class="text">오늘의 출근 현황.</span>
+            </div>
+            
+            <div class="chart-div">
+              <div class="name-keys">
+                <span>팀</span>
+                <span>아가씨</span>
+                <span>개수</span>
+                <span>TC</span>
+                <span>상태</span>
+              </div>
+              <div  *ngIf="myteam_list.length==0" class="datas">
+                <span style="    width: 100%;">출근 데이터가없습니다.</span>
+              </div>
+              <div (click)="editing2(a);" *ngFor="let a of myteam_list" class="datas">
+                <span style="font-size: 11px;
+                            text-align: center;">{{a.team}}</span>
+                <span>{{a.name}}</span>
+                <span >{{a.wantee}} </span>
+                <span>{{a.tc}}</span>
+                <span *ngIf="a.status=='justcome'">출근</span>
+                <span *ngIf="a.status=='attend'">방중</span>
+                <span *ngIf="a.status=='standby'">대기</span>
+                <span *ngIf="a.status=='gotohome'">퇴근</span>
+              </div>
+            </div>
+        </div>
+        <!-- TODO :)-->
+
         <!-- <div class="listing">
           <ion-list *ngFor="let a of agasijungsantotal_att">
             <ion-item style="font-size:12px;" > {{a.name}} {{a.date}} {{a.money}}만원 tc : {{a.tc}}  {{a.incharge}}  </ion-item>
           </ion-list>
         </div> -->
       </div>
-      <ion-fab style="  
-
-bottom: 268px;
-
-z-index: 9999999999;  " *ngIf="activeclass_att==1" bottom right >
-  <button (click)="attending();" ion-fab mini><ion-icon name="add"></ion-icon></button>
-</ion-fab>
+      <ion-fab style="bottom: 268px;z-index: 9999999999;" *ngIf="activeclass_att==1" bottom right >
+        <button (click)="attending();" ion-fab mini><ion-icon name="add"></ion-icon></button>
+      </ion-fab>
 
     </div>
     </ion-slide>
