초이스 디테일 아가씨 이름 변경 관련 수정
1. 아가씨명이 신규일경우 경고창 띄우고 종료
2. 아가씨가 이미 방중일경우 경고창 띄우고 종료
3. 아가씨가 신규가 아니고 변경 가능할때에는 변경시키고 디비에 반영.

--- a/src/pages/choicedetail/choicedetail.html
+++ b/src/pages/choicedetail/choicedetail.html
@@ -590,7 +590,7 @@ margin-top: -10px;">메모</button>
 
   
   
-  <button *ngIf="modifyflag" (click)="modifyfin(a,a.name,a)" style="
+  <button *ngIf="modifyflag" (click)="modifyfin(a,a.name,a,a.agasi)" style="
   margin-left: 5px;
   height: 55px;
   background: transparent;
