--- a/src/pages/choicedetail/choicedetail.html
+++ b/src/pages/choicedetail/choicedetail.html
@@ -68,8 +68,8 @@
         </div>
       </div>
       <div class="showmain">
-        <div   *ngIf="mainlist.length==0" class="datas">
-          <p >  초이스방 내역이 없습니다. </p>
+        <div  *ngIf="mainlist.length==0" class="datas">
+          <p>  초이스방 내역이 없습니다. </p>
         </div>
         <div class="mainlistloop"  *ngFor="let a of mainlist let j = index" >
           <div  *ngIf="a.agasi!=undefined" class="panel-4" id="panel-4-{{j}}">
@@ -119,9 +119,9 @@
                   {{abcd(b.date)}}
                 </span> 
                 <button *ngIf="b.findate==undefined||b.findate.length==0" (click)="end(b,a.name,a,1)" style=" display: block; margin: 5px; width: 55px; border-radius: 15px; background: white; font-size: 15px; height: 40px; color:black; padding-left:0px; padding-right:0px; text-align: center;">
-                종료
+                  종료
                 </button>
-                  <button (click)="reinit(b,a.name,a,1)" *ngIf="!modifyflag&&b.findate!=undefined&&b.findate.length!=0" style=" display: block; margin: 5px; width: 55px; height: 40px; border-radius: 15px; color:black; background: white !important; text-align: center; font-size: 13px; padding-left:0px; padding-right:0px;">
+                <button (click)="reinit(b,a.name,a,1)" *ngIf="!modifyflag&&b.findate!=undefined&&b.findate.length!=0" style=" display: block; margin: 5px; width: 55px; height: 40px; border-radius: 15px; color:black; background: white !important; text-align: center; font-size: 13px; padding-left:0px; padding-right:0px;">
                   재진행
                 </button>
               </div>
@@ -152,7 +152,7 @@
             초이스ㅅㅅ
           </button>
           <button *ngIf="!modifyflag" class="btnbottom" (click)="memo(a,a.name,a)" style=" margin-left: 5px; height: 40px; background: transparent; border: solid 1px !important; color:black !important; border-radius: 10px; padding-left:0px !important; padding-right:0px !important; font-size: 15px; width: 55px; top: 0px; margin-top: -10px;">
-          메모
+            메모
           </button>
           <button *ngIf="!modifyflag" class="btnbottom" (click)="modify0(a)" style=" margin-left: 5px; height: 40px; background: transparent; border: solid 1px !important; color:black !important; border-radius: 10px; padding-left:0px !important; padding-right:0px !important; font-size: 15px; width: 58px; top: 0px; margin-top: -10px; ">
             수정
@@ -201,13 +201,14 @@
           <div style="margin-top:33px;" *ngIf="a.agasi!=undefined" class="panel-4" id="panel-4-{{j}}">
             <div *ngFor="let b of a.agasi" class="looping" >
               <div class="mainmain">
-                <span *ngIf="!b.angel&&b.findate==undefined&&modifyflag" style=" margin: 0px !important; line-height: 50px; text-align: center;">
+
+                <span *ngIf="!b.angel&&b.findate==undefined&&modifyflag" style="margin: 0px !important; line-height: 50px; text-align: center;">
                   {{b.name}}
                 </span>
-                <span *ngIf="!b.angel&&b.findate==undefined&&!modifyflag" style=" margin: 0px !important; line-height: 50px; text-align: center;">
+                <span *ngIf="!b.angel&&b.findate==undefined&&!modifyflag" style="margin: 0px !important; line-height: 50px; text-align: center;">
                   {{b.name}}
                 </span>
-                <span *ngIf="!b.angel&&b.findate!=undefined&&!modifyflag" style=" margin: 0px !important; line-height: 50px; text-align: center;">
+                <span *ngIf="!b.angel&&b.findate!=undefined&&!modifyflag" style="margin: 0px !important; line-height: 50px; text-align: center;">
                   {{b.name}}
                 </span>
                 <span *ngIf="!b.angel&&b.findate!=undefined&&modifyflag" style=" margin: 0px !important; line-height: 50px; text-align: center;">
@@ -219,10 +220,11 @@
                   </span> 
                   {{b.name}}
                 </span>
-                <span style="line-height: 40px; font-size: 12px !important; text-align: center; width:40px;">
+
+                <span style="line-height: 40px; font-size: 12px !important; text-align: center; width:50px;">
                   {{b.date.split(" ")[1]}}
                 </span>
-                <span *ngIf="b.findate!=undefined&&!modifyflag" style="line-height: 40px; font-size: 12px !important; width:40px; text-align: center;">
+                <span *ngIf="b.findate!=undefined&&!modifyflag" style="line-height: 40px; font-size: 12px !important; width:50px; text-align: center;">
                   {{b.findate.split(" ")[1]}}
                 </span>
                 <span *ngIf="b.findate==undefined&&!modifyflag" style="line-height: 40px; width:40px; text-align: center;">
@@ -245,10 +247,11 @@
                 </span>
                 <span *ngIf="b.date!=undefined" style=" line-height: 50px; font-size: 9px !important; width: 55px; margin: 0px; ">
                   {{abcd(b.date)}}
-                </span>  
-                <button *ngIf="b.findate==undefined||b.findate.length==0" (click)="end(b,a.name,a,2)" style="display: block; margin: 5px; width: 55px; border-radius: 15px; background: white; font-size: 15px; height: 40px; color:black; padding-left:0px; padding-right:0px; text-align: center;">
-                  종료{{nowtime}}
+                </span>
+                <button *ngIf="b.findate==undefined||b.findate.length==0" (click)="end(b,a.name,a,2)" style="display: block; margin: 5px; width: 55px; border-radius: 3px; background: white; font-size: 15px; height: 40px; color:black; padding-left:0px; padding-right:0px; text-align: center;">
+                  종료
                 </button>
+                <button (click)="calcRoomtime(b.date)">걍팅</button>
                 <button *ngIf="!modifyflag&&b.findate!=undefined&&b.findate.length!=0" (click)="reinit(b,a.name,a,2)" style="display: block; margin: 5px; width: 55px; height: 40px; border-radius: 15px; color:black; background: white !important; text-align: center; font-size: 13px; padding-left:0px; padding-right:0px;">
                   재진행
                 </button>
@@ -273,10 +276,10 @@
         </div> 
         <div class="bottomdiv">
           <button *ngIf="!modifyflag" (click)="choicestart();" style=" margin-left: 5px; height: 40px; background: transparent; border: solid 1px !important; width: 58px; font-size: 14px; color:black !important; border-radius: 10px; width: 55px; padding-left:0px !important; padding-right:0px !important; background: white !important; top: 0px; margin-top: -10px;">
-                메이드
+            메이드
           </button>
           <button *ngIf="!modifyflag" (click)="endall(a,a.name,a,2)" style=" margin-left: 5px; height: 40px; background: transparent; border: solid 1px !important; color:black !important; border-radius: 10px; padding-left:0px !important; padding-right:0px !important; width: 70px; top: 0px; font-size: 16px; margin-top: -10px;">
-              전체종료
+            전체종료
           </button>
           <div *ngFor="let aa of mainlist_finished" class="c">
             <button *ngIf="!modifyflag&&aa.numofagasi==aa.numofpeople"  (click)="ss3(a,a.name,a)" style=" margin-left: 5px; height: 40px; background: transparent; border: solid 1px !important; color:black !important; border-radius: 10px; width: 60px; padding-left:0px !important; padding-right:0px !important; font-size: 14px; top: 0px; margin-top: -10px;">
